- 依赖`minio`升级至 8.5.8 - 版权原因，`Spring Boot`不再支持`javax.`命名空间下的类，全部需要替换为`jakarta.`命名空间 - 所有`SpringFox`注解（如：`@Api`、`@ApiOperation`、`@ApiModelProperty`）替换为`SpringDoc`注解（如：`@Tag`、`@Operation`、`@Schema`） - `application.yml`中，`spring.mvc.pathmatch.matching-strategy`配置节删除 - `application.yml`中，`helio.security.exclude-routes`配置节中移除`/v2/api-docs`路由（不会再用到了） - `application-*.yml`中，`spring.redis`配置节👉`spring.data.redis`配置节 - 删除`pom.xml`中`spring-boot-maven-plugin`插件的`configuration`节 - 【bootstrap】单元测试类仅保留`ExampleUnitTest` - 【admin-api】不再兼容旧的API路由前缀（`/sys`），和旧的驼峰式API路由